--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "react-addons-linked-state-mixin": "^0.14.3",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
-    "reflux": "^0.3.0"
+    "reflux": "^0.3.0",
+    "ejs": "2.3.3",
+    "express": "4.13.3"
   },
    "engines": {
     "node": "0.12.7"
